Website mostly done

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
       <link rel="stylesheet" type="text/css" href="style.css" />
+      <link rel="stylesheet" type="text/css" href="font/font-awesome.min.css" />
+      <!--[if IE 7]>
+      <link rel="stylesheet" href="font/font-awesome-ie7.min.css">
+      <![endif]-->
 
       <script type="text/javascript" src="script.js"></script>
    </head>
@@ -36,7 +40,10 @@
                   SOFTWARE
                </div>
                <div class="panel-intro">
-                  is my passion
+                  is my profession
+               </div>
+               <div class="panel-arrow">
+                  <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
          </div>
@@ -50,6 +57,9 @@
                <div class="panel-intro">
                   are my spare time
                </div>
+               <div class="panel-arrow">
+                  <i class="icon-circle-arrow-right"></i>
+               </div>
             </div>
          </div>
 
@@ -61,10 +71,13 @@
                <div class="panel-intro">
                   are my hobby
                </div>
+               <div class="panel-arrow">
+                  <i class="icon-circle-arrow-right"></i>
+               </div>
             </div>
          </div>
 
-         <div class="panel scheme-education" id="panel-current">
+         <div class="panel scheme-current" id="panel-current">
             <div class="panel-content">
                <div class="panel-punchline">
                   ENGINEERING
@@ -72,10 +85,13 @@
                <div class="panel-intro">
                   is my study
                </div>
+               <div class="panel-arrow">
+                  <i class="icon-circle-arrow-right"></i>
+               </div>
             </div>
          </div>
 
-         <div class="panel scheme-opportunity" id="panel-contact">
+         <div class="panel scheme-contact" id="panel-contact">
             <div class="panel-content">
                <div class="panel-punchline">
                   CONTACT
@@ -83,7 +99,284 @@
                <div class="panel-intro">
                   me
                </div>
+               <div class="panel-arrow">
+                  <i class="icon-circle-arrow-right"></i>
+               </div>
             </div>
+         </div>
+      </div>
+
+      <div id="gear-column">
+      </div>
+
+      <div id="content">
+         <div id="content-professional" class="content-body">
+            <div class="content-title scheme-professional">
+               SOFTWARE IS MY PROFESSION
+               <i class="icon-remove-sign go-back"></i>
+            </div>
+
+            <div class="content-text">
+               <p>
+                  I love diving head-first into new environments, learning new industries and new tools, and discovering how software can make them better. In the 15 years since I was first introduced to programming, I've built systems for desktop, web, and mobile.
+               </p>
+               <p>
+                  I've been an employee and an entrepreneur, working by myself and with a team. I've built knowledge management systems, project management systems, unmanned aircraft control systems, and automated mapping systems.
+               </p>
+               <p>
+                  I don't know where I'll find myself next, but I'm always looking for a good challenge, and an opportunity to build something better.
+               </p>
+
+               <h1>Software Development Intern, CDL Systems</h1>
+               <p>
+                  I completed a 16 month internship at CDL Systems (now Lockeed Martin Canada) between May 2011 and August 2012.
+               </p>
+               <p>
+                  While at CDL, I developed real-time unmanned aircraft control software for the US Army and other clients. I worked on all stages of the project, including designing and coding actual control software, developing automated testing, writing technical integration manual, and automating build and release processes. I worked primarily in C++/Qt, as well as Python and other languages, targeting Linux- and Solaris-based workstations.
+               </p>
+
+               <h1>Application Developer, Pillar Resource Services</h1>
+               <p>
+                  At Pillar, I developed a project management database and reporting system for a two-year construction project. I also maintained and supported the application as client reporting requirements changed. I performed network and desktop maintenance, and developed numerous small business applications.
+               </p>
+
+               <h1>Software Developer, Trident Exploration</h1>
+               <p>
+                  At Trident, I developed an application to aggregate corporate knowledge from multiple database systems, and present it in a user-friendly and effective manner.I gained experience with systems including Peloton WellView, QByte, and AFE Navigator. I also built additional web applications to track EHS incidents, joint ventures, penalty payouts, field compressors, and more.
+               </p>
+
+               <h1>Application Developer, Aguila Exploration</h1>
+               <p>
+                  At Aguila, I developed several major projects including Field Accounting System, extensive ArcMap scripting, and Nortel voicemail notification system. I also built a series of small applications for both end-users and network maintenance.
+               </p>
+
+               <h1>Teaching Assistant, University of Calgary</h1>
+               <p>
+                  I worked in the Faculty of Continuing Education, assisted students in the Certificate in Software Development Program.
+               </p>
+            </div>
+         </div>
+
+         <div id="content-projects" class="content-body">
+            <div class="content-title scheme-projects">
+               PROJECTS ARE MY SPARE TIME
+               <i class="icon-remove-sign go-back"></i>
+            </div>
+
+            <div class="content-text">
+               <p>
+                  Although I'm super busy with work and school, I still seem to find time to 
+                  hack away on crazy projects. I guess that's what makes software development
+                  more than just a job to me - when I get home, I still can't put it down.
+               </p>
+
+               <h1>Antex</h1>
+               <p>
+                  Antex is the fun half of a real-time strategy game for iPad. You control an army
+                  of hovercraft, tanks, helicopters, ships and submarines as you explore the ruins
+                  of the world, and try to figure out where everyone went.
+               </p>
+               <p>
+                  <img src="antex.png" />
+               </p>
+
+               <h1>Spacegame</h1>
+               <p>
+                  Spacegame is a simulated space battle, in which each ship is flown by an autopilot that receives only realistic sensor data, 
+                  and controls only weapon and engine power levels. If a ship wants to spin, it has to figure out how to power its engines to start spinning, and then reverse them to stop. It was basically an excuse to learn 3D physics, real-time control systems and OpenGL.
+               </p>
+               <p>
+                  <img src="spacegame.jpg" />
+               </p>
+               <p>
+                  Check out <a href="http://github.com/jdthorne/spacegame">Spacegame on GitHub</a>.
+               </p>
+
+               <h1>Fast Rage</h1>
+               <p>
+                  Ever needed a rage face right now, to text to your friends? ...yeah, me neither,
+                  but I had an Apple developer license sitting around, and a couple hours to kill.
+                  Fast Rage is basically me learning how to get an App into the App Store.
+               </p>
+               <p>
+                  Can you believe that Apple rejected it the first time for being 'too simple'?
+               </p>
+               <p style="text-align: center;">
+                  <img src="fastrage.png" />
+               </p>
+               <p>
+                  Fast Rage is in the <a href="https://itunes.apple.com/ca/app/fast-rage-faces/id508643853?mt=8">App Store</a>.
+               </p>
+
+               <h1>Many, many more</h1>
+               <p>
+                  One day, all my old projects will be on GitHub. Until then, email me if you want
+                  to see more awesome stuff!
+               </p>
+            </div>
+         </div>
+         <div id="content-film" class="content-body">
+            <div class="content-title scheme-film">
+               SHORT FILMS ARE MY HOBBY
+               <i class="icon-remove-sign go-back"></i>
+            </div>
+
+            <div class="content-text">
+               <p>
+                  After directing, editing, and producing three Engineering Week movies, I've
+                  discovered a love for amateur video production. It lets me do something with all
+                  the stories that rattle around in my head, and have some fun in the process. 
+                  The best part is that now, I can share the fun with you!
+                  Below are some of the videos I've made recently.
+               </p>
+
+               <h1>Scooby Zoo, Where Are You!</h1>
+               <p>
+                  In the fall of 2012, I directed, edited and produced Scooby Zoo, the spiritual 
+                  successor to Pokemon: Zoo Version. After engineering students begin disappearing, 
+                  and zombie business students threaten the school, The Gang has no choice but to investigate. It's a fabulous, 
+                  ridiculous adventure, and this time it's not a mistake that it looks like it was
+                  shot in the Engineering Block.
+               </p>
+               <p>
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/yfEue8SKwkk" frameborder="0" allowfullscreen></iframe>
+               </p>
+
+               <h1>Pokemon: Zoo Version</h1>
+               <p>
+                  In 2011, I directed and produced the winner of the 2012 <a href="http://enggweek.com">Engg Week</a> Film Festival! Join Ash Ketchem</a>, a naive 13-year-old boy, as he embarks out into a twisted parody of the Pokemon world.  Watch as he faces off against his bitter rival Dickface Oak, fights the departmental gyms of Engineering, and learns what boobs are.  Fun for the whole family*, guaranteed!**
+               </p>
+               <p>
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/OxTxx9HpZeg" frameborder="0" allowfullscreen></iframe>
+               </p>
+               <p style="font-size: small; padding-top: 20px;" class="long">
+                  * Not actually fun for the whole family.  You probably shouldn't show this to small children.  Or your parents. Or anyone who can't take a joke, or doesn't like to watch topless men dance, or hasn't been to Engineering school.  Actually screw it, don't show it to anyone.<br />
+                  ** Not an actual guarantee.
+               </p>
+
+               <h1>Zoo Graduation Video 2013</h1>
+               <p>
+                  After four long years, my class is finally graduating. And while they may be graduating
+                  without me (as my MEED minor adds a semester), I still made them a super fun graduation video. 
+                  And before you ask, yes, we really did hand all of that in, and yes, we did get an A.
+               <p>
+               <p>
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/j0qaXSFDIE0" frameborder="0" allowfullscreen></iframe>
+               </p>
+
+               <h1>CG Test Shots (Summer 2011)</h1>
+               <p>
+                  Who doesn't love gratuitous special effects? Nobody, that's who.
+               <p>
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/pLqc-FU_v4Q" frameborder="0" allowfullscreen></iframe>
+               </p>
+
+               <h1>Want more videos?</h1>
+               <p>
+                  Watch more awesome videos at <b><a href="http://youtube.com/jamesthorneengg">youtube.com/jamesthorneengg</a></b>
+               </p>
+            </div>
+         </div>
+
+         <div id="content-current" class="content-body">
+            <div class="content-title scheme-current">
+               ENGINEERING IS MY STUDY
+               <i class="icon-remove-sign go-back"></i>
+            </div>
+
+            <div class="content-text">
+               <p>
+                  Day to day, I'm a Fourth Year Engineering Student at the Schulich School of Engineering,
+                  University of Calgary. I'm also working on a Minor in Entrepreneurship and Enterprise
+                  Development through the Haskayne School of Business.
+               </p>
+
+               <h1>Team Lunch Autonomous UAV Systems</h1>
+               <p>
+                  I'm the Team Lead for Team Lunch: Autonomous UAV Systems. Team Lunch is building an
+                  Engineering Capstone Design project, in which we fit an autonomous collision avoidance
+                  system to a small UAV.
+               </p>
+               <p>
+                  In English, we're building a UAV that can't crash.
+               </p>
+               <p>
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/JpoWFqPPURQ" frameborder="0" allowfullscreen></iframe>
+               </p>
+               <p>
+                  More information can be found on the team's <a href="http://teamlunch.github.com">GitHub Page</a>.
+               </p>
+
+               <h1>Zoo President</h1>
+               <p>
+                  I'm the current president of the Electrical, Computer and Software Engineering Students
+                  Society, aka Zoo.
+               </p>
+               <p>
+                  Zoo represents Electrical and Software Engineering students at the Schulich School of Engineering. We facilitate student involvement in student and faculty events like Frosh Week and Engineering Week. We also coordinate with the University to improve the Engineering program and handle student issues.
+               </p>
+               <p>
+                  As President, I mainly just make everyone else do stuff :)
+               </p>
+               <p>
+                  <img src="zoo-van.jpg" />
+               </p>
+
+
+               <h1>Found the Key!</h1>
+               <p>
+                  Along with the talented Zoo team, I found the key and won Key Clue 2013.
+               </p>
+               <p>
+                  Key Clue is an intense, week-long alternate reality competition held during Engineering Week. Teams solve puzzles, break ciphers, and lose track of reality as they compete to find a simple house key, hidden somewhere within Calgary city limits.
+               </p>
+               <p>
+                  This year's key was in <a href="https://maps.google.ca/maps?q=Lynnewood+Ridge+Park&hl=en&ll=50.996229,-114.016371&spn=0.006854,0.008208&sll=50.996215,-114.016371&sspn=0.006881,0.008208&hq=Lynnewood+Ridge+Park&t=m&z=17">Lynnewood Ridge Park</a>.
+               </p>
+               <p>
+                  <img src="keyclue-clock.jpg" />
+               </p>
+
+            </div>
+         </div>
+
+         <div id="content-contact" class="content-body">
+            <div class="content-title scheme-contact">
+               CONTACT ME
+               <i class="icon-remove-sign go-back"></i>
+            </div>
+
+            <div class="content-text">
+               <p>
+                  I don't know where I'll find myself next, but I'm always looking for a good challenge, and an opportunity to build something better.
+
+                  If you're looking for someone to do just that, drop me a line!
+               </p>
+
+               <h1>Direct Contact Information</h1>
+               <p>
+                  I'm always available, and I look forward to hearing from you!
+                  <ul class="icons">
+                     <li><i class="icon-phone"></i> (403) 585-3269</li>
+                     <li><i class="icon-envelope"></i> <a href="mailto:james@jamesthorne.ca">james@jamesthorne.ca</a></li>
+                  </ul>
+               </p>
+
+               <h1>Around the Internet</h1>
+               <p>
+                  You can also find me in these places:
+                  <ul class="icons">
+                     <li><i class="icon-linkedin"></i> <a href="http://linkedin.com/jamesdonaldthorne">My LinkedIn Profile</a> has professional information</li>
+                     <li><i class="icon-github"></i> <a href="http://github.com/jdthorne">My GitHub Account</a> has my projects</li>
+                     <li><i class="icon-sign-blank"></i> <a href="http://youtube.com/jamesthorneengg">My YouTube Channel</a> has some short films</li>
+                     <li><i class="icon-twitter"></i> <a href="http://twitter.com/jamesdthorne">My Twitter Handle</a> has some tweets</li>
+                  </ul>
+               </p>
+            </div>
+         </div>
+
+         <div id="content-back" class="go-back">
+            <i class="icon-circle-arrow-left"></i><span> back to jamesthorne.ca</span>
          </div>
       </div>
    </body>
