--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
       <link href='http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:200,400,700' rel='stylesheet' type='text/css'>
+      <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps' rel='stylesheet' type='text/css'>
 
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
@@ -34,6 +35,9 @@
       </div>
 
       <div id="menu-column">
+         <div class="check-out">
+            Check out all the cool stuff I've done <i class="icon-caret-down"></i>
+         </div>
          <div class="panel scheme-professional" id="panel-professional">
             <div class="panel-content">
                <div class="panel-punchline">
