--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
    <head>
       <title>James Thorne</title>
@@ -26,9 +27,17 @@
       <![endif]-->
 
       <script type="text/javascript" src="script.js"></script>
+
+      <!-- 
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+      -->
+
+      <meta name="viewport" content="width=1024, user-scalable=yes" />
    </head>
    <body>
-      <img id="background" src="james.jpg" alt="James Thorne" />
+      <div style="position: absolute; left: 0px; top: 0px; bottom: 0px; right: 0px; overflow: hidden;">
+         <img id="background" src="http://i.imgur.com/36jA5Wz.jpg" alt="James Thorne" />
+      </div>
       <div id="whiteout"></div>
 
       <div class="name-banner">
