--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
 
       <script type="text/javascript" src="script.js"></script>
 
-      <!-- 
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-      -->
-
       <meta name="viewport" content="width=1024, user-scalable=yes" />
    </head>
    <body>
@@ -142,7 +138,7 @@
 
                <h1>Software Development Intern, CDL Systems</h1>
                <p>
-                  I completed a 16 month internship at CDL Systems (now Lockeed Martin Canada) between May 2011 and August 2012.
+                  I completed a 16 month internship at <a href="http://www.cdlsystems.com">CDL Systems</a> (now Lockeed Martin Canada) between May 2011 and August 2012.
                </p>
                <p>
                   While at CDL, I developed real-time unmanned aircraft control software for the US Army and other clients. I worked on all stages of the project, including designing and coding actual control software, developing automated testing, writing technical integration manual, and automating build and release processes. I worked primarily in C++/Qt, as well as Python and other languages, targeting Linux- and Solaris-based workstations.
@@ -150,17 +146,17 @@
 
                <h1>Application Developer, Pillar Resource Services</h1>
                <p>
-                  At Pillar, I developed a project management database and reporting system for a two-year construction project. I also maintained and supported the application as client reporting requirements changed. I performed network and desktop maintenance, and developed numerous small business applications.
+                  At <a href="http://www.pillar.ca">Pillar</a>, I developed a project management database and reporting system for a two-year construction project. I also maintained and supported the application as client reporting requirements changed. I performed network and desktop maintenance, and developed numerous small business applications.
                </p>
 
                <h1>Software Developer, Trident Exploration</h1>
                <p>
-                  At Trident, I developed an application to aggregate corporate knowledge from multiple database systems, and present it in a user-friendly and effective manner.I gained experience with systems including Peloton WellView, QByte, and AFE Navigator. I also built additional web applications to track EHS incidents, joint ventures, penalty payouts, field compressors, and more.
+                  At <a href="http://www.tridentexploration.ca">Trident</a>, I developed an application to aggregate corporate knowledge from multiple database systems, and present it in a user-friendly and effective manner.I gained experience with systems including Peloton WellView, QByte, and AFE Navigator. I also built additional web applications to track EHS incidents, joint ventures, penalty payouts, field compressors, and more.
                </p>
 
                <h1>Application Developer, Aguila Exploration</h1>
                <p>
-                  At Aguila, I developed several major projects including Field Accounting System, extensive ArcMap scripting, and Nortel voicemail notification system. I also built a series of small applications for both end-users and network maintenance.
+                  At <a href="http://www.aguila.ca">Aguila</a>, I developed several major projects including Field Accounting System, extensive ArcMap scripting, and Nortel voicemail notification system. I also built a series of small applications for both end-users and network maintenance.
                </p>
 
                <h1>Teaching Assistant, University of Calgary</h1>
@@ -366,12 +362,20 @@
                   If you're looking for someone to do just that, drop me a line!
                </p>
 
-               <h1>Direct Contact Information</h1>
+               <h1>Contact Me Directly</h1>
                <p>
                   I'm always available, and I look forward to hearing from you!
                   <ul class="icons">
                      <li><i class="icon-phone"></i> (403) 585-3269</li>
                      <li><i class="icon-envelope"></i> <a href="mailto:james@jamesthorne.ca">james@jamesthorne.ca</a></li>
+                  </ul>
+               </p>
+
+               <h1>Download my Resume</h1>
+               <p>
+                  My resume is available here:
+                  <ul class="icons">
+                     <li><i class="icon-file"></i><a href="JamesThorne.pdf">Download my Resume</a></li>
                   </ul>
                </p>
 
