--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
    </head>
    <body>
       <div style="position: absolute; left: 0px; top: 0px; bottom: 0px; right: 0px; overflow: hidden;">
-         <img id="background" src="http://i.imgur.com/36jA5Wz.jpg" alt="James Thorne" />
+         <img id="background" src="http://i.imgur.com/36jA5Wz.jpg" alt="James Thorne" title="" />
       </div>
       <div id="whiteout"></div>
 
