Tweaked content, added item slide animation

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
          <div class="panel scheme-film" id="panel-film">
             <div class="panel-content">
                <div class="panel-punchline">
-                  SHORT FILMS
+                  FILMMAKING
                </div>
                <div class="panel-intro">
-                  are my hobby
+                  is my hobby
                </div>
                <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
@@ -226,7 +226,7 @@
          </div>
          <div id="content-film" class="content-body">
             <div class="content-title scheme-film">
-               SHORT FILMS ARE MY HOBBY
+               FILMMAKING IS MY HOBBY
                <i class="icon-remove-sign go-back"></i>
             </div>
 
@@ -307,7 +307,7 @@
                   system to a small UAV.
                </p>
                <p>
-                  In English, we're building a UAV that can't crash.
+                  In English: We're building a quadcopter that can't crash.
                </p>
                <p>
                   <iframe width="640" height="360" src="http://www.youtube.com/embed/JpoWFqPPURQ" frameborder="0" allowfullscreen></iframe>
@@ -383,10 +383,10 @@
                <p>
                   You can also find me in these places:
                   <ul class="icons">
-                     <li><i class="icon-linkedin"></i> <a href="http://linkedin.com/jamesdonaldthorne">My LinkedIn Profile</a> has professional information</li>
-                     <li><i class="icon-github"></i> <a href="http://github.com/jdthorne">My GitHub Account</a> has my projects</li>
-                     <li><i class="icon-sign-blank"></i> <a href="http://youtube.com/jamesthorneengg">My YouTube Channel</a> has some short films</li>
-                     <li><i class="icon-twitter"></i> <a href="http://twitter.com/jamesdthorne">My Twitter Handle</a> has some tweets</li>
+                     <li><i class="icon-linkedin"></i> <a href="http://linkedin.com/in/jamesdonaldthorne">linkedin.com/in/jamesdthorne</a> has more professional information</li>
+                     <li><i class="icon-github"></i> <a href="http://github.com/jdthorne">github.com/jdthorne</a> has my projects</li>
+                     <li><i class="icon-sign-blank"></i> <a href="http://youtube.com/jamesthorneengg">youtube.com/jamesthorneengg</a> has some short films</li>
+                     <li><i class="icon-twitter"></i> <a href="http://twitter.com/jamesdthorne">twitter.com/jamesdthorne</a> has some tweets</li>
                   </ul>
                </p>
             </div>
