--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
                <p>
                   While at CDL, I developed real-time unmanned aircraft control software for the US Army and other clients. I worked on all stages of the project, including designing and coding actual control software, developing automated testing, writing technical integration manual, and automating build and release processes. I worked primarily in C++/Qt, as well as Python and other languages, targeting Linux- and Solaris-based workstations.
                </p>
+               <p>
+                  <img src="uav.jpg" />
+               </p>
 
                <h1>Application Developer, Pillar Resource Services</h1>
                <p>
@@ -152,6 +155,9 @@
                <h1>Software Developer, Trident Exploration</h1>
                <p>
                   At <a href="http://www.tridentexploration.ca">Trident</a>, I developed an application to aggregate corporate knowledge from multiple database systems, and present it in a user-friendly and effective manner.I gained experience with systems including Peloton WellView, QByte, and AFE Navigator. I also built additional web applications to track EHS incidents, joint ventures, penalty payouts, field compressors, and more.
+               </p>
+               <p>
+                  <img src="trident.jpg" />
                </p>
 
                <h1>Application Developer, Aguila Exploration</h1>
