Added failback support for imgur cdn :)

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <meta name="viewport" content="width=1024, user-scalable=yes" />
    </head>
    <body>
-      <div style="position: absolute; left: 0px; top: 0px; bottom: 0px; right: 0px; overflow: hidden;">
+      <div class="background-holder">
          <img id="background" src="http://i.imgur.com/36jA5Wz.jpg" alt="James Thorne" title="" />
       </div>
       <div id="whiteout"></div>
