Added info, rearranged buttons

--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
    </head>
    <body>
       <div class="background-holder">
-         <img id="background" src="http://i.imgur.com/36jA5Wz.jpg" alt="James Thorne" title="" />
+         <img id="background" src="http://i.imgur.com/HzXyd9p.jpg" alt="James Thorne" title="" />
       </div>
       <div id="whiteout"></div>
 
       <div class="name-banner">
       </div>
 
-      <div id="menu-column">
+      <div id="menu">
          <div class="check-out">
             Check out all the cool stuff I've done <i class="icon-caret-down"></i>
          </div>
@@ -50,72 +50,50 @@
                </div>
                <div class="panel-intro">
                   is my profession
-               </div>
-               <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
-         </div>
-
-
-         <div class="panel scheme-projects" id="panel-projects">
+         </div><div class="panel scheme-projects" id="panel-projects">
             <div class="panel-content">
                <div class="panel-punchline">
                   PROJECTS
                </div>
                <div class="panel-intro">
                   are my spare time
-               </div>
-               <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
-         </div>
-
-         <div class="panel scheme-film" id="panel-film">
+         </div><div class="panel scheme-film" id="panel-film">
             <div class="panel-content">
                <div class="panel-punchline">
                   FILMMAKING
                </div>
                <div class="panel-intro">
                   is my hobby
-               </div>
-               <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
-         </div>
-
-         <div class="panel scheme-current" id="panel-current">
+         </div><div class="panel scheme-current" id="panel-current">
             <div class="panel-content">
                <div class="panel-punchline">
                   ENGINEERING
                </div>
                <div class="panel-intro">
                   is my study
-               </div>
-               <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
-         </div>
-
-         <div class="panel scheme-contact" id="panel-contact">
+         </div><div class="panel scheme-contact" id="panel-contact">
             <div class="panel-content">
                <div class="panel-punchline">
                   CONTACT
                </div>
                <div class="panel-intro">
                   me
-               </div>
-               <div class="panel-arrow">
                   <i class="icon-circle-arrow-right"></i>
                </div>
             </div>
          </div>
-      </div>
-
-      <div id="gear-column">
       </div>
 
       <div id="content">
