--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
                      <li><i class="icon-github"></i> <a href="http://github.com/jdthorne">github.com/jdthorne</a> has my projects</li>
                      <li><i class="icon-sign-blank"></i> <a href="http://youtube.com/jamesthorneengg">youtube.com/jamesthorneengg</a> has some short films</li>
                      <li><i class="icon-twitter"></i> <a href="http://twitter.com/jamesdthorne">twitter.com/jamesdthorne</a> has some tweets</li>
+                     <li><i class="icon-sign-blank"></i> <a href="https://www.vizify.com/james-thorne">vizify.com/jamesthorne</a> has an awesome biography</li>
                   </ul>
                </p>
             </div>
