Added Pillar image

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                <p>
                   At <a href="http://www.pillar.ca">Pillar</a>, I developed a project management database and reporting system for a two-year construction project. I also maintained and supported the application as client reporting requirements changed. I performed network and desktop maintenance, and developed numerous small business applications.
                </p>
+               <p>
+                  <img src="pillar.jpg" />
+               </p>
 
                <h1>Software Developer, Trident Exploration</h1>
                <p>
