Removed imgur dependancy, updated Antex in projects section

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    </head>
    <body>
       <div class="background-holder">
-         <img id="background" src="http://i.imgur.com/HzXyd9p.jpg" alt="James Thorne" title="" />
+         <img id="background" src="james-background.jpg" alt="James Thorne" title="" />
       </div>
       <div id="whiteout"></div>
 
@@ -166,14 +166,17 @@
                   more than just a job to me - when I get home, I still can't put it down.
                </p>
 
-               <h1>Antex</h1>
+               <h1>Antex <div class="appstore" data-url="https://itunes.apple.com/us/app/antex/id656352369?ls=1&mt=8"></div></h1>
                <p>
-                  Antex is the fun half of a real-time strategy game for iPad. You control an army
+                  <a href="http://jamesthorne.ca/antex">Antex</a> is the fun half of a real-time strategy game for iPad. You control an army
                   of hovercraft, tanks, helicopters, ships and submarines as you explore the ruins
                   of the world, and try to figure out where everyone went.
                </p>
                <p>
-                  <img src="antex.png" />
+                  <iframe width="640" height="360" src="http://www.youtube.com/embed/6bPwxpZDI5Q?rel=0" frameborder="0" allowfullscreen></iframe>
+               </p>
+               <p>
+                  Check out <a href="http://jamesthorne.ca/antex">jamesthorne.ca/antex</a> for more information, or find Antex in the <a href="https://itunes.apple.com/us/app/antex/id656352369?ls=1&mt=8">App Store</a>!
                </p>
 
                <h1>Spacegame</h1>
@@ -188,7 +191,7 @@
                   Check out <a href="http://github.com/jdthorne/spacegame">Spacegame on GitHub</a>.
                </p>
 
-               <h1>Fast Rage</h1>
+               <h1>Fast Rage <div class="appstore" data-url="https://itunes.apple.com/us/app/fast-rage-faces/id508643853?ls=1&mt=8"></div></h1>
                <p>
                   Ever needed a rage face right now, to text to your friends? ...yeah, me neither,
                   but I had an Apple developer license sitting around, and a couple hours to kill.
