Added Antex bug to homepage

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
       <div class="name-banner">
       </div>
 
+      <div class="antex">
+         <div class="antex-image" onclick="window.location = 'http://jamesthorne.ca/antex'">
+            <span class="antex-more-info">
+               <i class="icon-circle-arrow-right"></i>
+            </span>
+         </div>
+         <div class="antex-appstore" data-url="https://itunes.apple.com/us/app/antex/id656352369?ls=1&mt=8"></div>
+      </div>
+
       <div id="menu">
          <div class="check-out">
             Check out all the cool stuff I've done <i class="icon-caret-down"></i>
